# TradeAgents

./: .env.example  .gitignore  README.md  holdings.json.example  holdings_wse.json  portfolio.json.example  pyproject.toml  requirements.txt  screen.json
.github/: copilot-instructions.md
.github/agents/: analyst-desk.agent.md  data-hunter.agent.md  data-scout.agent.md  devils-advocate.agent.md  macro-strategist.agent.md  opportunity-scout.agent.md  portfolio-manager.agent.md  sentiment-analyst.agent.md  the-bear.agent.md  the-chartist.agent.md  the-cio.agent.md
.github/workflows/: screen.yml
crew/: __init__.py  desk.py  main.py  portfolio.py  tools.py
lib/: __init__.py  common.py
scripts/: _portfolio_check.py  fetch_fundamentals.py  fetch_macro.py  fetch_quote.py  fetch_sentiment.py  fetch_technicals.py  portfolio_allocator.py  position_sizer.py  scorecard.py  screen_candidates.py  view_results.py
skills/analyst-desk/: SKILL.md  analystDeskSkill.md
skills/damodaran-analyst/: damodaranSkill.md
skills/data-hunter/: SKILL.md  dataHunterSkill.md
skills/data-scout/: SKILL.md  dataScoutSkill.md
skills/devils-advocate/: SKILL.md
skills/macro-strategist/: macroStrategistSkill.md
skills/malik-gpw-style/: malikGpwStyleSkill.md
skills/opportunity-scout/: SKILL.md  opportunityScoutSkill.md
skills/portfolio-manager/: portfolioManagerSkill.md
skills/sentiment-analyst/: SKILL.md  sentimentAnalystSkill.md
skills/the-bear/: theBearSkill.md
skills/the-chartist/: SKILL.md
skills/the-cio/: SKILL.md
watchlists/: us100.txt  us_mega.txt  wse_blue.txt
(+3 files in other folders)
