[project]
name = "analyst-desk"
version = "0.1.0"
description = "Script-first stock research toolkit for screening, scoring, and portfolio sizing"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
